script/kind-session-persistence/tests/gateway-sticky-multiclient/backend-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-mc
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-mc
  template:
    metadata:
      labels:
        app: whoami-mc
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
