script/kind-session-persistence/tests/gateway-sticky-multiclient/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-mc
  namespace: default
spec:
  selector:
    app: whoami-mc
  ports:
    - name: web
      port: 80
      targetPort: 80
