script/kind-session-persistence/tests/gateway-sticky-multiclient/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sticky-multiclient
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - whoami-mc.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-mc
          port: 80
      sessionPersistence:
        sessionName: sticky-mc
        type: Cookie
        cookieConfig:
          lifetimeType: Session
